--- a/docs/assets/extra.css
+++ b/docs/assets/extra.css
@@ -5,6 +5,7 @@
 :root > * {
     --md-text-font: 'Lato';
     --md-code-font: 'Fira Code';
+
 }
 
 [data-md-color-scheme="slate"] {
@@ -15,6 +16,9 @@
     --md-typeset-color: #E6E1E5;
     --md-typeset-a-color: #D0BCFF;
     --md-accent-fg-color: #D0BCFF;
+
+    --md-code-bg-color: rgba(208, 188, 255, 0.05);
+
 }
 
 [data-md-color-scheme="default"] {
@@ -25,6 +29,14 @@
     --md-typeset-color: #1C1B1F;
     --md-typeset-a-color: #6750A4;
     --md-accent-fg-color: #6750A4;
+
+    --md-code-bg-color: rgba(103, 80, 164, 0.05);
+
+}
+
+.md-logo.img {
+    height: 48px;
+    width: 48px;
 }
 
 .md-typeset h1, .md-typeset h2 {
@@ -33,6 +45,13 @@
     font-family: "Inter";
 }
 
+.md-typeset p, .md-typeset a, .md-typeset li {
+    font-size: 15px;
+}
+
+.md-typeset code {
+    font-size: 14px;
+}
 
 .md-footer-meta {
     background-color:  var(--md-default-bg-color);
@@ -47,6 +66,20 @@
     /* transition: border-width 0.6s cubic-bezier(.1,.7,.1,1); */
 }
 
+.md-typeset .admonition.info,
+.md-typeset details.note {
+  border-color: var(--md-accent-fg-color);
+}
+
+.md-typeset .info > .admonition-title,
+.md-typeset .info > summary {
+  background-color: var(--md-code-bg-color);
+}
+
+.md-typeset .info > .admonition-title::before,
+.md-typeset .info > summary::before {
+  background-color: var(--md-accent-fg-color);
+}
 
 @media (min-width: 400px) {
     .grid-left {
